@@ -1,4 +1,10 @@
-2022-05-21 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+2022-05-22 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* support/regression/MakeList,
+	  support/regression/cases/Makefile.in:
+	  Document reasons for some failing TinyC tests.
+
+2022-05-22 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* support/regression/MakeList,
 	  support/regression/cases/Makefile.in:
